Thu Aug 16 10:22:16 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection_doctest2.txt: Add test for supplying a
	  document ID to query_similar() which isn't in the database.

Thu Aug 16 09:49:09 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst: Add documentation for similarity search.

Thu Aug 16 09:15:44 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Retry the expand until we don't get a
	  DatabaseModifiedError.

Thu Aug 16 09:06:44 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py,secore/searchconnection_doctest2.txt:
	  Implementation of the query_similar() method, returning a query
	  to use to get a new set of results based on similarity.

Wed Aug 08 18:52:24 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py,secore/searchconnection_doctest2.txt:
	  Add API for performing searches for similar documents.  Currently
	  just works out which fields should be used for performing the
	  similarity comparison, but doesn't do the actual similarity
	  search.

Wed Aug 08 13:37:26 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Fix up calculation of significant
	  digits to cope with extreme values (ie, 0), to round to the
	  nearest significant digit (previously, it rounded down), and to
	  use math.log10 instead of a loop to calculate the logarithm.

Wed Aug 08 13:21:41 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Fix issue with new match estimate
	  rounding when match estimate is 0.

Wed Aug 08 03:17:37 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Improve documentation comment.

Wed Aug 08 03:13:10 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Add "matches_human_readable_estimate"