@@ -1,3 +1,9 @@
+Thu Aug 16 17:24:06 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* secore/searchconnection.py,secore/searchconnection_doctest2.txt:
+	  Add new method "get_significant_terms()" which returns the most
+	  significant terms in the set of ids specified.
+
 Thu Aug 16 10:22:16 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* secore/searchconnection_doctest2.txt: Add test for supplying a
